# rstopo

./: Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: tracking.md
.github/workflows/: rust.yml
rstopo/: Cargo.toml
rstopo/src/: lib.rs
rstopo/src/simplex/: mod.rs  simplex.rs
