[workspace.package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)", "Scattered-Systems (https://github.com/scattered-systems)"]
categories = [ "science" ]
description = "rstopo"
edition = "2021"
homepage = "https://github.com/FL03/rstopo/wiki"
keywords = ["mathematics", "topology", "toolkit"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/FL03/rstopo"
version = "0.0.0"

[workspace.dependencies]
anyhow = "1"
lazy_static = "1"
num = { default-features = false, version = "0.4" }
paste = "1"
smart-default = "0.7"
strum = { default-features = false, features = ["derive"], version = "0.26" }

[workspace]
default-members = [
    "rstopo"
]

exclude = [

]

members = [
    "rstopo",
]

resolver = "2"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
